--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
             <a href="Citações.html">Citações</a>
             <a href="Siglas.html">Singla</a>
             <a href="Listas.html">Listas</a>
+            <a href="Fontes.html">Fontes</a>
         </nav>
         
         <p>
