Minhas alterações locais

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="Estilo/estilo.css">
 </head>
 <body>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: url('Imagens/Background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            height: 100vh;
+        }
+    </style>
+
     <header>
         <h1>
         Desenvolvimento Web
@@ -30,6 +40,7 @@
             <a href="Siglas.html">Singla</a>
             <a href="Listas.html">Listas</a>
             <a href="Fontes.html">Fontes</a>
+            <a href="Cores.html">Cores</a>
         </nav>
         
         <p>
