--- a/Listas.html
+++ b/Listas.html
@@ -9,7 +9,15 @@
    
 </head>
 <body>
-    
+        <style>
+             body {
+                margin: 0;
+                padding: 0;
+                background: url('Imagens/Background.jpg') no-repeat center center fixed;
+                background-size: cover;
+                height: 100vh;
+            }
+        </style>
         <title>Listas</title>
 
         <header>
