--- a/Formatação de texto.html
+++ b/Formatação de texto.html
@@ -11,6 +11,15 @@
 
     </head>
     <body>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                background: url('Imagens/Background.jpg') no-repeat center center fixed;
+                background-size: cover;
+                height: 100vh;
+            }
+        </style>
         <header>
             <h1>
             Desenvolvimento Web
