--- a/Siglas.html
+++ b/Siglas.html
@@ -10,6 +10,16 @@
 </head>
 <body>
 
+    <style>
+         body {
+            margin: 0;
+            padding: 0;
+            background: url('Imagens/Background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            height: 100vh;
+        }
+    </style>
+
     <header>
         <h1>
         Desenvolvimento Web
